--- a/index.html
+++ b/index.html
@@ -151,36 +151,36 @@ a.section:hover:before {
 
 <div class="content1">
 <center><img src="https://i.postimg.cc/526FbcpJ/new2.png" height="600" width="600">
-    <p><a class="section" href="">Ⓢignaling ⓟathway Ⓢeries</a></p>
+    <p><a class="section" href="">Signaling Pathway Series</a></p>
   <br>
   </center>
 </div>
 
 <div class="content2">
 <center><img src="https://i.postimg.cc/sxwt9RRQ/page2a.png" height="600">
-    <p><a class="section" href="">Ⓐngel Ⓕarmers w/ Ⓙuli Ⓜajer</a></p>
+    <p><a class="section" href="">Angel Farmers w/ Juli Majer</a></p>
   <br>
   </center>
 </div>
 
 <div class="content3">
 <center><img src="https://i.postimg.cc/XYDzY8VW/33.png" height="600" width="600">
-  <p><a class="section" href="ai.html">ⒶI Ⓣext Ⓖenerator Ⓒollaborations</a></p>
+  <p><a class="section" href="ai.html">AI Text Generator Collaborations</a></p>
   <br>
   </center>
 </div>
 
 <div class="content4">
 <center><img src="https://i.postimg.cc/cCWScN50/4-Panel-insta.png" height="600">
-    <p><a class="section" href="">④ ⓟanel Ⓒomic</a></p>
+    <p><a class="section" href="">4 Panel Comic</a></p>
   <br>
   </center>
 </div>
     
 <div class="header">    
-<li><a href="https://www.instagram.com/organism.zero">INSTAGRAM ↗</a></li>
-<li><a href="https://www.twitter.com/network_motif">TWITTER ↗</a></li>
-<li><a href="https://www.are.na/indra-s-net">ARE.NA ↗</a></li>
+<li><a href="https://www.instagram.com/organism.zero">INSTAGRAM ⤴</a></li>
+<li><a href="https://www.twitter.com/network_motif">TWITTER ⤴</a></li>
+<li><a href="https://www.are.na/indra-s-net">ARE.NA ⤴</a></li>
 <li><a href="index.html">Back To Top</a></li>
 </div>    
     
