--- a/ai.html
+++ b/ai.html
@@ -155,9 +155,9 @@ a.section:hover:before {
   </div>
     
 <div class="header">    
-<li><a href="https://www.instagram.com/organism.zero">INSTAGRAM ↗</a></li>
-<li><a href="https://www.twitter.com/network_motif">TWITTER ↗</a></li>
-<li><a href="https://www.are.na/indra-s-net">ARE.NA ↗</a></li>
+<li><a href="https://www.instagram.com/organism.zero">INSTAGRAM ⤴</a></li>
+<li><a href="https://www.twitter.com/network_motif">TWITTER ⤴</a></li>
+<li><a href="https://www.are.na/indra-s-net">ARE.NA ⤴</a></li>
 <li><a href="ai.html">Back To Top</a></li>
 </div> 
     
