--- a/xeno.html
+++ b/xeno.html
@@ -58,6 +58,7 @@
          .headerText {
          padding-left: 160px;
          padding-right: 160px;
+             font-weight: bold;
          }
          .sticky {
          text-align: center;
@@ -128,7 +129,8 @@
          .headerText {
          padding-left: 50px;
          padding-right: 50px;
-         font-size: 32px;
+         font-size: 30px;
+             font-weight: bold;
          }
          }
       </style>
