--- a/xeno.html
+++ b/xeno.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
    <head>
-   <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://fonts.googleapis.com/css?family=Roboto|Forum&display=swap" rel="stylesheet">
       <style>
+         ::selection {
+         background: black; /* WebKit/Blink Browsers */
+         color: white;
+         }
+         ::-moz-selection {
+         background: black; /* Gecko Browsers */
+         color: white;
+         }          
+         body::-webkit-scrollbar {
+         width: 0.5em;
+         }
+         body::-webkit-scrollbar-thumb {
+         background-color: black;
+         }
          body {
+         cursor:cell;
          margin: 0;
          font-family: 'Roboto', sans-serif;
          display: grid;
@@ -43,22 +58,24 @@
          }
          .text {
          background-color: #f4d3a7;    
-         font-size: 15px;
+         font-size: 18px;
          color: #000;
          padding: 150px;
-         padding-top: 25px;
+         padding-top: 75px;
          padding-bottom: 30px;
          font-family: 'Roboto', sans-serif;
          left: 50%;
          text-align: left;
          }
          .headerImg {
-         width: 75%;
+         width: 56.4%;
          }
          .headerText {
-         padding-left: 160px;
-         padding-right: 160px;
-             font-weight: bold;
+         text-align: left;
+         padding-left: 150px;
+         padding-right: 200px;
+         font-size: 54px;
+         font-weight: bold;
          }
          .sticky {
          text-align: center;
@@ -74,6 +91,7 @@
          text-align: center;
          }
          li a {
+         cursor:cell;
          display: block; 
          color: #000;
          margin-right: 0;
@@ -90,7 +108,7 @@
          font-family: 'Roboto', sans-serif;
          background-color: #fff;
          color: black;
-         padding: 14px;
+         padding: 14px 14px;
          text-align: center;
          text-decoration: none;
          display: inline-block;
@@ -115,29 +133,38 @@
          max-width: 100%;
          }
          .container {
-         width: 95%;
+         width: 90%;
          } 
          .text {
-         padding: 20px;
+         font-size: 13px;
+         padding-left: 20px;
+         padding-top: 40px;
+         padding-right: 20px;
          }
          .headerImg {
          width: 90%;
          }
          li a:link, li a:visited {
-         font-size: 8px;
+         font-size: 9px;
+         padding: 14px;
          }
          .headerText {
-         padding-left: 50px;
-         padding-right: 50px;
-         font-size: 30px;
-             font-weight: bold;
+         padding-left: 10px;
+         padding-right: 10px;
+         font-size: 35px;
+         font-weight: bold;
          }
          }
+         @media screen and (max-width: 350px) {
+         li a:link, li a:visited {
+         font-size: 8px;
+         }
+         }          
       </style>
    </head>
    <body>
       <div class="top-container">
-         <h1>XENO VEHICLES</h1>
+         <h1>Writing</h1>
       </div>
       <div class="header" id="myHeader">
          <li><a href="index.html">⒈ Home</a></li>
@@ -150,7 +177,8 @@
          <div class="content1">
             <div class="container">
                <img class="headerImg" src="https://i.postimg.cc/nrLDBnHx/xeno-Vehicles-Graphic.png">
-               <p><div class="headerText">Xeno Vehicles: <br>Nature, Technology & Matter in the Post-Anthropocene</div>_______<br>
+               <p>
+               <div class="headerText">Xeno Vehicles: <br>Nature, Technology & Matter in the Post-Anthropocene<br>_______</div>
             </div>
             <div class="text">
                Of all the destabilizing vectors proliferating through the turbulent field of entangled contemporary crises, few rival the Anthropocene in their magnitude and consequence. For those who have yet to encounter the term, the Anthropocene is a title popularized by atmospheric chemist Paul Crutzen as a means of characterizing novel features of planetary life that distinguish the earth system from its previous paradigm, the Holocene. It seeks to describe a geological epoch wherein the collective activity of the human species constitutes an amplified telluric influence. Moreover, it is suspected that if the modern economic matrices of work, energy, material flows, and environmental production associated with the Anthropocene continue to proliferate at their current rate, Homo Sapiens will effectively endanger the sustainability of our shared and finite ecological operating space. 
