--- a/writing.html
+++ b/writing.html
@@ -228,9 +228,9 @@
          </div>
       </center>
       <div class="header">
-         <li><a href="https://www.instagram.com/organism.zero">INSTAGRAM ↗</a></li>
-         <li><a href="https://www.twitter.com/network_motif">TWITTER ↗</a></li>
-         <li><a href="https://www.are.na/indra-s-net">ARE.NA ↗</a></li>
+         <li><a href="https://www.instagram.com/organism.zero">INSTAGRAM</a></li>
+         <li><a href="https://www.twitter.com/network_motif">TWITTER</a></li>
+         <li><a href="https://www.are.na/indra-s-net">ARE.NA</a></li>
          <li><a href="writing.html">Back To Top</a></li>
       </div>
       <script>
