--- a/writing.html
+++ b/writing.html
@@ -192,7 +192,7 @@
             <div class="container">
                <img src="https://i.postimg.cc/nrLDBnHx/xeno-Vehicles-Graphic.png" alt="Avatar" class="image">
                <div class="overlay">
-                  <div class="text"><a href="xeno.html">XENO VEHICLES: Nature, Technology & Matter in the Post-Anthropocene (2017)</a></div>
+                  <div class="text"><a href="">XENO VEHICLES: Nature, Technology & Matter in the Post-Anthropocene (2017)</a></div>
                </div>
             </div>
          </div>
